looking to fix overflow issue on mobile

--- a/_projects/wedding/css/modules/landing-heading.scss
+++ b/_projects/wedding/css/modules/landing-heading.scss
@@ -153,8 +153,8 @@ landing-heading {
 		top: -5%;
 		filter: blur(.4px);
 		bottom: 0;
-		width: 150%;
-		right: -50%;
+		width: 80%;
+		right: 0;
 		background: url(../images/grain.webp) repeat, linear-gradient(83.21deg, rgb(169, 16, 75) 0%,
 				rgb(205, 155, 196) 100%);
 		background-blend-mode: overlay;
