--- a/_projects/wedding/css/style.css
+++ b/_projects/wedding/css/style.css
@@ -973,8 +973,8 @@ landing-heading figcaption:hover {
   top: -5%;
   filter: blur(0.4px);
   bottom: 0;
-  width: 150%;
-  right: -50%;
+  width: 80%;
+  right: 0;
   background: url(../images/grain.webp) repeat, linear-gradient(83.21deg, rgb(169, 16, 75) 0%, rgb(205, 155, 196) 100%);
   background-blend-mode: overlay;
   -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 0.4), transparent 70%);
